fix visibility bug

--- a/style.sass
+++ b/style.sass
@@ -264,6 +264,7 @@ main
 
 @media (min-width: 50rem)
   #mask
+    display: block
     pointer-events: none
     position: absolute
     top: 2.3rem
